--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Book2 from "../components/Book2.astro";
 ---
 
 <Layout title="Contact Us">
@@ -120,6 +121,9 @@ import Layout from "../layouts/Layout.astro";
       </button>
     </div>
   </form>
+
+  <Book2 />
+
   <a href="/privacy/">
     <p
       class="text-brand-accent hover:text-brand-primary text-center mt-4 underline"
