--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -13,6 +13,7 @@ import shonishin from "../assets/shonishin.jpg";
 import facial from "../assets/facial.jpg";
 import celluma from "../assets/celluma.jpg";
 import red from "../assets/red.webp";
+import ButtonFixed from "../components/ButtonFixed.astro";
 ---
 
 <Layout title="Services">
@@ -102,4 +103,5 @@ import red from "../assets/red.webp";
     >
     </div>
   </div> -->
+  <ButtonFixed />
 </Layout>
