--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Layout from "../layouts/Layout.astro";
 import Button from "../components/Button.astro";
 import Image from "astro/components/Image.astro";
 import davenport from "../assets/davenport.jpg";
+import BookButton from "../components/BookButton.astro";
+import Book2 from "../components/Book2.astro";
 ---
 
 <Layout title="Samaya Cullerton">
@@ -72,20 +74,15 @@ import davenport from "../assets/davenport.jpg";
         currently accepting new patients.
       </p>
       <div class="mt-6 grid grid-cols-1 md:grid-cols-2 gap-4 items-center">
-        <button
-          class="bg-brand-accent text-text-light font-semibold text-lg px-6 py-3 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition focus:ring-2 focus:ring-[#cc926a] focus:outline-none width-full md:w-64"
-          data-cal-link="mattosurf/1-hour-session"
-          data-cal-namespace="1-hour-session"
-          data-cal-config='{"layout":"month_view","theme":"light"}'
-        >
-          Schedule a Session
-        </button>
+        <Book2 />
         <img
           src="/AllianceLogo.svg"
           alt="Central California Alliance for Health Insurance logo"
           class="w-16 h-16 justify-self-center md:justify-self-end"
         />
       </div>
+
+      <Book2 />
     </div>
   </div>
   <div class="max-w-7xl mx-auto text-lg md:mt-4 mt-2 md:mb-3 text-center">
