--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -124,7 +124,7 @@ import Book2 from "../components/Book2.astro";
     </div>
   </form>
 
-  <Book2 />
+  <!-- <Book2 /> -->
 
   <!-- <a href="/privacy/">
     <p
