--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -85,28 +85,66 @@ import Book2 from "../components/Book2.astro";
       <Book2 />
     </div>
   </div>
+  <div class="flex justify-center mt-4">
+    <a
+      href="https://us.fullscript.com/welcome/wellness-medical-center?utm_medium=webreferral&utm_source=other&utm_campaign=abmwebbuttons_light_500x500.svg&signup_source=website_buttons"
+      target="_top"
+    >
+      <img
+        src="https://assets.fullscript.com/buttons/light_500x500.svg"
+        alt="Order supplements through my Fullscript store."
+      />
+    </a>
+  </div>
+
   <div class="max-w-7xl mx-auto text-lg md:mt-4 mt-2 md:mb-3 text-center">
     <div class="mx-auto text-text-dark sm:py-4 md:max-w-7xl">
-      <h2 class="text-2xl sm:text-3xl md:text-4xl font-semibold py-1 mb-12">
+      <h2 class="text-2xl sm:text-3xl md:text-4xl font-semibold mt-8 mb-6">
         Trusted by Patients
       </h2>
-
       <!-- Centered Grid -->
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-start mx-auto">
-        <div class="rounded-xl bg-[#e4e9e1] p-8 w-full">
+      <!-- Masonry Grid Layout -->
+      <div class="columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 mx-auto">
+        <div class="break-inside-avoid rounded-xl bg-[#efddd0] p-8 w-full">
           <p class="text-left mb-6">
             Samaya is a wonderful practitioner. I have been receiving treatments
             from her for years, and I always am so thankful to have her in my
             life! Her treatments provide effective relief for my aches and
             pains, and support me through emotional ups and downs. She is a
-            gifted herbalist, and always knows just the right thing to help me.
+            gifted herbalist and always knows just the right thing to help me.
             She is consistently thorough in both understanding what I am hoping
-            for with the treatment, and in answering any questions I may have.
-            Her style of acupuncture is very gentle and restorative— I am so
-            appreciative of her care, and recommend her to everyone!
-          </p><p class="text-right font-bold mt-2">Molly D.</p>
+            for with the treatment and in answering any questions I may have.
+            Her style of acupuncture is very gentle and restorative—I am so
+            appreciative of her care and recommend her to everyone!
+          </p>
+          <p class="text-right font-bold mt-2">Molly D.</p>
         </div>
-        <div class="rounded-xl bg-[#e4e9e1] p-8 w-full">
+
+        <div class="break-inside-avoid rounded-xl bg-[#e4e9e1] p-8 w-full">
+          <p class="text-left mb-6">
+            I cannot sing Samaya's praises ENOUGH. She is a gifted healer,
+            herbalist, acupuncturist, and all-around amazing human. She
+            continues to successfully usher me through perimenopause with
+            wisdom, insight, ease, grace, and loving kindness. I recommend her
+            so highly. 10 stars for Samaya!
+          </p>
+          <p class="text-right font-bold mt-2">T.L.</p>
+        </div>
+
+        <div class="break-inside-avoid rounded-xl bg-[#efddd0] p-8 w-full">
+          <p class="text-left mb-6">
+            Samaya is truly phenomenal at what she does. She has been my
+            acupuncturist throughout the years, before I had kids, on my
+            fertility journey, through two pregnancies, two healing journeys,
+            and while raising my family. She is gentle and my kids love her. She
+            has helped me troubleshoot so many challenging matters regarding our
+            health, and she just always makes me feel better. She gives us
+            magical teas and drops to drink and makes me laugh. She’s a gift!
+          </p>
+          <p class="text-right font-bold mt-2">E.S.</p>
+        </div>
+
+        <div class="break-inside-avoid rounded-xl bg-[#e4e9e1] p-8 w-full">
           <p class="text-left mb-6">
             I have been seeing Samaya for years, and I truly cannot recommend
             her enough! She has been an absolute game changer in helping me
@@ -130,19 +168,6 @@ import Book2 from "../components/Book2.astro";
           </p>
           <p class="text-right font-bold mt-2">S.G.</p>
         </div>
-        <!-- <div class="rounded-xl bg-[#e4e9e1] p-8 w-full">
-          <p class="text-left mb-6">
-            Samaya is a wonderful practitioner. I have been receiving treatments
-            from her for years, and I always am so thankful to have her in my
-            life! Her treatments provide effective relief for my aches and
-            pains, and support me through emotional ups and downs. She is a
-            gifted herbalist, and always knows just the right thing to help me.
-            She is consistently thorough in both understanding what I am hoping
-            for with the treatment, and in answering any questions I may have.
-            Her style of acupuncture is very gentle and restorative— I am so
-            appreciative of her care, and recommend her to everyone!
-          </p><p class="text-right font-bold mt-2">Molly D.</p>
-        </div> -->
       </div>
     </div>
   </div>
