--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -10,7 +10,7 @@ const navItems = [
 ---
 
 <nav
-  class="md:flex items-center justify-between text-text-dark md:pt-4 pt-0 pb-8 md:pb-0"
+  class="md:flex items-center justify-between text-text-dark md:pt-4 pt-0 pb-3 md:pb-5 md:px-6 7xl:px-0"
 >
   <!-- Logo and Title -->
   <a
@@ -18,14 +18,14 @@ const navItems = [
     class="flex justify-center md:justify-start items-center space-x-4"
   >
     <img src="/logo2.svg" alt="logo" class="w-14 h-14 text-brand-primary" />
-    <h1 class="text-lg sm:text-2xl font-semibold text-brand-accent">
-      Samaya Cullerton Acupuncture
+    <h1 class="text-xl sm:text-2xl font-semibold text-brand-accent">
+      Wellness Medical Center
     </h1>
   </a>
 
   <!-- Navigation Links -->
   <div
-    class="flex justify-center md:justify-end space-x-6 md:space-x-12 sm:text-lg md:text-xl px-4 md:px-0 text-brand-secondary"
+    class="flex justify-center md:justify-end space-x-6 md:space-x-12 sm:text-lg md:text-xl 7xl:px-0 text-brand-secondary"
   >
     {
       navItems.map(({ name, href }) => {
