--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,16 +7,19 @@ import Book2 from "../components/Book2.astro";
   <form
     name="contact"
     netlify
-    class="px-6 py-2 md:px-12 rounded-3xl max-w-4xl mx-auto md:mt-12 mb-16"
+    class="px-6 md:px-12 rounded-3xl max-w-4xl mx-auto mb-16"
   >
     <p class="hidden">
       <label>
         Don’t fill this out if you’re human: <input name="bot-field" />
       </label>
     </p>
-    <h3 class="text-2xl font-semibold text-brand-accent mb-2 pt-0">
+    <div class="text-text-dark sm:py-4 md:max-w-3x text-center">
+      <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold">Contact Us</h2>
+    </div>
+    <!-- <h3 class="text-2xl font-semibold text-brand-accent mb-2 pt-0">
       Contact Us
-    </h3>
+    </h3> -->
     <p class="mb-6">
       Feel free to reach out with any questions about scheduling or our
       services!
