--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -4,13 +4,13 @@ import Button from "../components/Button.astro";
 import Card from "../components/Card.astro";
 import photo1 from "../assets/lake.jpg";
 import guasha from "../assets/guasha.jpg";
-import acu from "../assets/acu.jpg";
-import cupping from "../assets/cupping.jpg";
+import acu from "../assets/acupuncture.webp";
+import cupping from "../assets/cupping.webp";
 import herbs from "../assets/herbs.jpg";
-import nutrition from "../assets/nutrition.jpg";
+import nutrition from "../assets/nutrition.webp";
 import tuina from "../assets/tuina.jpg";
-import shonishin from "../assets/shonishin.jpg";
-import facial from "../assets/facial.jpg";
+import shonishin from "../assets/shonishin.webp";
+import facial from "../assets/facial.webp";
 import celluma from "../assets/celluma.jpg";
 import red from "../assets/red.webp";
 import ButtonFixed from "../components/ButtonFixed.astro";
@@ -18,11 +18,11 @@ import ButtonFixed from "../components/ButtonFixed.astro";
 
 <Layout title="Services">
   <div class="text-text-dark sm:py-4 md:max-w-3x text-center">
-    <h2 class="text-2xl sm:text-3xl md:text-4xl font-semibold py-1">
-      Services
-    </h2>
+    <h2 class="text-2xl sm:text-3xl md:text-4xl font-semibold">Services</h2>
   </div>
-  <section class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6 p-6">
+  <section
+    class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-x-16 gap-y-8 p-6"
+  >
     <!-- Block 1 -->
     <Card
       img={acu}
