--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -17,8 +17,14 @@ import ButtonFixed from "../components/ButtonFixed.astro";
 ---
 
 <Layout title="Services">
-  <div class="text-text-dark sm:py-4 md:max-w-3x text-center">
-    <h2 class="text-2xl sm:text-3xl md:text-4xl font-semibold">Services</h2>
+  <div class="text-text-dark md:max-w-3x text-center">
+    <h2 class="text-2xl sm:text-3xl md:text-4xl py-4 font-semibold">
+      Services
+    </h2>
+    <p>
+      We offer personalized holistic treatments, blending traditional Chinese
+      and modern therapies to support your health and well-being.
+    </p>
   </div>
   <section
     class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-x-16 gap-y-8 p-6"
