--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,7 +14,7 @@ import Book2 from "../components/Book2.astro";
         Don’t fill this out if you’re human: <input name="bot-field" />
       </label>
     </p>
-    <div class="text-text-dark sm:py-4 md:max-w-3x text-center">
+    <div class="text-text-dark py-4 md:max-w-3x text-center">
       <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold">Contact Us</h2>
     </div>
     <!-- <h3 class="text-2xl font-semibold text-brand-accent mb-2 pt-0">
