--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -17,8 +17,8 @@ import ButtonFixed from "../components/ButtonFixed.astro";
 ---
 
 <Layout title="Services">
-  <div class="text-text-dark md:max-w-3x text-center">
-    <h2 class="text-2xl sm:text-3xl md:text-4xl py-4 font-semibold">
+  <div class="text-text-dark md:max-w-3x px-6">
+    <h2 class="text-2xl sm:text-3xl md:text-4xl py-4 font-semibold text-center">
       Services
     </h2>
     <p>
