--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -1,7 +1,7 @@
 <div class="max-w-7xl mx-auto text-lg md:mt-4 mt-2 md:mb-3 text-center">
   <div class="mx-auto text-text-dark sm:py-4 md:max-w-7xl">
-    <h2 class="text-2xl sm:text-3xl md:text-4xl font-semibold mt-8 mb-6">
-      Trusted by Patients
+    <h2 class="text-2xl sm:text-3xl md:text-4xl font-semibold mb-6">
+      What Our Clients Say
     </h2>
     <!-- Centered Grid -->
     <!-- Masonry Grid Layout -->
