--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -5,7 +5,7 @@ import Card from "../components/Card.astro";
 import photo1 from "../assets/lake.jpg";
 import guasha from "../assets/guasha.jpg";
 import acu from "../assets/acupuncture.webp";
-import cupping from "../assets/cupping.webp";
+import cupping from "../assets/cupping.jpg";
 import herbs from "../assets/herbs.webp";
 import nutrition from "../assets/nutrition.jpg";
 import tuina from "../assets/tuina.jpg";
