--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -12,7 +12,7 @@ import tuina from "../assets/tuina.jpg";
 import shonishin from "../assets/shonishin.webp";
 import facial from "../assets/facial.webp";
 import celluma from "../assets/celluma.jpg";
-import red from "../assets/red.webp";
+import red from "../assets/red.jpg";
 import ButtonFixed from "../components/ButtonFixed.astro";
 import Testimonials from "../components/Testimonials.astro";
 ---
