--- a/src/components/ButtonFixed.astro
+++ b/src/components/ButtonFixed.astro
@@ -92,7 +92,7 @@
   overlayButton.addEventListener("click", (e) => {
     e.preventDefault(); // Prevent unintended triggering
     if (!overlayButton.disabled) {
-      window.location.href = "https://cal.com/mattosurf/1-hour-session";
+      window.location.href = "https://cal.com/mattosurf/  ";
     }
   });
 
@@ -124,6 +124,8 @@
     position: fixed;
     bottom: 2rem;
     width: calc(100% - 2rem);
+    left: 1rem;
+    z-index: 50;
   }
 
   @media (min-width: 640px) {
