--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -4,12 +4,12 @@ import Button from "../components/Button.astro";
 import Card from "../components/Card.astro";
 import photo1 from "../assets/lake.jpg";
 import guasha from "../assets/guasha.jpg";
-import acu from "../assets/acupuncture.webp";
+import acu from "../assets/acupuncture.jpg";
 import cupping from "../assets/cupping.jpg";
 import herbs from "../assets/herbs.webp";
 import nutrition from "../assets/nutrition.jpg";
 import tuina from "../assets/tuina.jpg";
-import shonishin from "../assets/shonishin.webp";
+import shonishin from "../assets/shonishin.jpg";
 import facial from "../assets/facial.webp";
 import celluma from "../assets/celluma.jpg";
 import red from "../assets/red.jpg";
