--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -49,6 +49,17 @@
 
       <div class="break-inside-avoid rounded-xl bg-[#e4e9e1] p-8 w-full">
         <p class="text-left mb-6">
+          Samaya is an incredible healer! She has been integral to my recovery
+          from a number of injuries. Because of her holistic approach, she has
+          also guided me toward incorporating everyday nutritional and herbal
+          practices to support my long-term health. She is brilliant,
+          compassionate and highly skilled.
+        </p>
+        <p class="text-right font-bold mt-2">Sara R.</p>
+      </div>
+
+      <div class="break-inside-avoid rounded-xl bg-[#efddd0] p-8 w-full">
+        <p class="text-left mb-6">
           I have been seeing Samaya for years, and I truly cannot recommend her
           enough! She has been an absolute game changer in helping me manage a
           variety of physical and mental health concerns, including
