--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,8 +54,8 @@ import Samaya from "../assets/samaya.jpg";
       </p>
       <p class="mb-4 text-lg md:text-xl">
         In addition to my private practice, I am also part of <a
-          href="https://www.google.com/"
-          class="text-orange-700 hover:text-orange-900"
+          href="https://www.mariamitchelllac.com/"
+          class="text-[#bf7644] hover:text-orange-800"
         >
           Wellness Medical Center</a
         > in Santa Cruz, CA, a cherished, women-owned clinic serving the local community
