--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,7 +7,7 @@ import Book2 from "../components/Book2.astro";
   <form
     name="contact"
     netlify
-    class="px-6 md:px-12 rounded-3xl max-w-4xl mx-auto mb-16"
+    class="px-6 md:px-12 rounded-3xl max-w-3xl mx-auto mb-16"
   >
     <p class="hidden">
       <label>
@@ -21,8 +21,11 @@ import Book2 from "../components/Book2.astro";
       Contact Us
     </h3> -->
     <p class="mb-6">
-      Feel free to reach out with any questions about scheduling or our
-      services!
+      Reach out with any questions or to schedule an appointment. Fill out the
+      form below or call/text us at <a
+        href="tel:(831) 588-9581"
+        class="text-[#bf7644] hover:text-orange-800">831-588-9581</a
+      >
     </p>
 
     <!-- Name Input -->
@@ -99,14 +102,14 @@ import Book2 from "../components/Book2.astro";
     </div>
 
     <!-- SMS Opt-in Link -->
-    <div class="mt-4">
+    <!-- <div class="mt-4">
       <a
         href="/sms-opt-in/"
         class="text-brand-accent underline hover:text-brand-dark"
       >
         I'm OK with text messages →
       </a>
-    </div>
+    </div> -->
 
     <!-- Submit Button -->
     <div class="text-center md:text-left mt-6">
