--- a/src/pages/cancellation.astro
+++ b/src/pages/cancellation.astro
@@ -15,16 +15,16 @@ import Layout from "../layouts/Layout.astro";
     Patient Acknowledgement Appointment Cancellation Policy
   </h1>
 
-  <p class="text-gray-700">Dear Patients,</p>
+  <p class="text-gray-700 mb-4">Dear Patients,</p>
 
-  <p class="text-gray-700">
+  <p class="text-gray-700 mb-4">
     Samaya Cullerton, LAc has instituted an Appointment Cancellation Policy. A
     cancellation made with less than a 24-hour notice significantly limits our
     ability to make the appointment available for another patient in need. To
     remain consistent with our mission, we have instituted the following policy:
   </p>
 
-  <p class="text-gray-700">
+  <p class="text-gray-700 mb-4">
     Please provide our office a 24-hour notice in the event that you need to
     reschedule your appointment. This will allow us the opportunity to provide
     care to another patient. If you have not notified us of your cancellation
