--- a/src/pages/cancellation.astro
+++ b/src/pages/cancellation.astro
@@ -4,16 +4,16 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Cancellation Policy">
   <h1 class="text-3xl font-bold text-brand-accent mt-8 mb-6">
-    Patient Acknowledgement Appointment Cancellation Policy
+    Cancellation Policy
   </h1>
 
   <p class="text-gray-700 mb-6">
     Effective Date: <strong>March 3, 2025</strong>
   </p>
 
-  <!-- <h1 class="text-2xl font-semibold text-gray-800 mt-8 mb-4">
+  <h1 class="text-2xl font-semibold text-gray-800 mt-8 mb-4">
     Patient Acknowledgement Appointment Cancellation Policy
-  </h1> -->
+  </h1>
 
   <p class="text-gray-700 mb-4">Dear Patients,</p>
 
