--- a/src/components/Book2.astro
+++ b/src/components/Book2.astro
@@ -92,7 +92,7 @@
   overlayButton.addEventListener("click", (e) => {
     e.preventDefault(); // Prevent unintended triggering
     if (!overlayButton.disabled) {
-      window.location.href = "https://cal.com/mattosurf/";
+      window.location.href = "https://cal.com/samaya.cullerton";
     }
   });
 
