--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+// import { MapPin } from "lucide-astro";
 ---
 
 <Layout title="Contact Us">
@@ -128,6 +129,21 @@ import Layout from "../layouts/Layout.astro";
       200 7th Ave #135, Santa Cruz, CA 95062
     </p>
     <p class="flex justify-center items-center gap-1">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="w-4 h-4 text-[#bf7644] hover:text-orange-800 text-sm"
+      >
+        <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+        <circle cx="12" cy="10" r="3"></circle>
+      </svg>
       <a
         href="https://www.google.com/maps?q=200+7th+Ave+%23135,+Santa+Cruz,+CA+95062"
         target="_blank"
